2001-02-24  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/lshift.c: Rewrite.
	* mpn/generic/rshift.c: Rewrite.

	* longlong.h: Use UWtype for external interfaces that expect mp_limb_t.

	* longlong.h (arm): #define invert_limb.

	* mpn/arm: Make labels have local scope.

	* configure.in (arm*-*-*): Set extra_functions.
	* longlong.h (arm): #define udiv_qrnnd.
	* mpn/arm/udiv.asm: New file.

2001-02-24  Kevin Ryde  <kevin@swox.se>

	* tune/many.pl: Add mpn_count_{leading,trailing}_zeros and
	mpn_invert_limb.  Add count_{leading,trailing}_zeros from a .h file.
	Correction to modexact_1_odd prototype.  Support ansi2knr.
	* tune/speed.h, tune/common.c: Consequent changes.

	* demos/expr/*: Make a few more functions available in expressions,
	create only libexpr.a, misc minor updates.

	* mpn/Makeasm.am: Add some comments about suffix ordering.

	* tests/refmpn.c (rshift_make, lshift_make): No need to compare
	unsigned to zero.

	* mpq/mul.c: Detect and optimize squaring.

2001-02-23  Torbjorn Granlund  <tege@swox.com>

	* mpn/mips3: Convert files to `.asm'.

	* mpn/arm: Convert files to `.asm'.  Misc cleanups.
	* mpn/arm/submul_1.asm: New file.

2001-02-21  Kevin Ryde  <kevin@swox.se>

	* tune/tuneup.c (all): Only one compiler print should match, no need
	for #undef PRINTED_COMPILER.

	* mpfr/mpfr.h (mpfr_sgn): Use mpfr_cmp_ui (patch from Paul).

	* mpz/fib_ui.c: Update some remarks about alternative algorithms.
	* gmp.texi (Fibonacci Numbers Algorithm): Ditto.
	(Assigning Floats): Clarify mpf_swap swaps the precisions too.
	(Low-level Functions): Try to be clearer about negative cofactors.

2001-02-21  Torbjorn Granlund  <tege@swox.com>

	* mpn/sparc64/copyi.asm: Streamline for small operands.
	* mpn/sparc64/add_n.asm: Likewise.
	* mpn/sparc64/sub_n.asm: Likewise.

	* mpn/sparc64/copyd.asm: New file.

2001-02-20  Torbjorn Granlund  <tege@swox.com>

	* mpn/sparc64/lshift.asm: Rewrite.
	* mpn/sparc64/rshift.asm: Rewrite.
