@@ -1,3 +1,8 @@
+2001-02-26  Torbjorn Granlund  <tege@swox.com>
+
+	* longlong.h (arm): Optimize sub_ddmmss by testing for constant operands.
+	* mpn/arm/invert_limb.asm: New file.
+
 2001-02-24  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/generic/lshift.c: Rewrite.
